RESOLVED FIXED134198
[Mac] Uncaught exception crash when destroying MediaPlayerPrivateAVFoundationObjC
https://bugs.webkit.org/show_bug.cgi?id=134198
Summary [Mac] Uncaught exception crash when destroying MediaPlayerPrivateAVFoundation...
Jer Noble
Reported 2014-06-23 09:58:25 PDT
[Mac] Uncaught exception crash when destroying MediaPlayerPrivateAVFoundationObjC
Attachments
Patch (1.99 KB, patch)
2014-06-23 10:03 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2014-06-23 10:03:32 PDT
Jer Noble
Comment 2 2014-06-23 11:02:56 PDT
Jer Noble
Comment 3 2014-06-23 13:37:34 PDT
Note You need to log in before you can comment on or make changes to this bug.